--- a/ProjektConnection/package.json
+++ b/ProjektConnection/package.json
@@ -1,11 +1,5 @@
 {
-    "name": "name",
-    "description": "description",
-    "authors": "author",
-    "version": "1.0.0",
-    "main": "index.js",
     "scripts": {
-        "start": "node index.js"
-    },
-    "dependencies": {}
+        "start": "node app.js"
+    }
 } 
